[tool.poetry]
name = "nimphel"
version = "0.1.0"
description = "Netlist Invention and Manipulation with Python Embedded Language"
authors = ["Sergio Vinagrero <servinagrero@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
